bk_ida/gccida/c3/insert
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2016:82: error: must use 'enum' tag to refer to type 'machine_mode'
 struct table_elt * insert( rtx x,  struct table_elt *classp, unsigned int hash, machine_mode mode) 
                                                                                 ^
                                                                                 enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2122:4: error: expected ';' after expression
rtx v112; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2122:5: error: use of undeclared identifier 'v112'
rtx v112; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2130:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v120; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2131:4: error: expected ';' after expression
rtx v121; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2131:5: error: use of undeclared identifier 'v121'
rtx v121; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2134:4: error: expected ';' after expression
rtx v124; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2134:5: error: use of undeclared identifier 'v124'
rtx v124; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2136:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v127; // [rsp+Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2198:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v14 = ( ( unsigned int)( mode_class_0[( unsigned __int8)v13] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2225:41: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned int' of different size
v20 = _mm_add_epi64( _mm_shuffle_epi32( ( __m128i)x->fld[0].rtuint, 68), ( __m128i)xmm*(short *)0x65ADF0); 
                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/llvm-7/lib/clang/7.0.0/include/emmintrin.h:4347:52: note: expanded from macro '_mm_shuffle_epi32'
  (__m128i)__builtin_ia32_pshufd((__v4si)(__m128i)(a), (int)(imm))
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2225:84: error: use of undeclared identifier 'xmm'
v20 = _mm_add_epi64( _mm_shuffle_epi32( ( __m128i)x->fld[0].rtuint, 68), ( __m128i)xmm*(short *)0x65ADF0); 
                                                                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2226:7: error: invalid conversion between vector type '__m128d' (vector of 2 'double' values) and integer type 'HARD_REG_ELT_TYPE' (aka 'unsigned long long') of different size
v21 = ( __m128d)hard_regs_in_table; 
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2230:5: error: assigning to '__m128d' (vector of 2 'double' values) from incompatible type 'long long'
v24 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2237:5: error: assigning to '__m128d' (vector of 2 'double' values) from incompatible type 'long long'
v24 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2238:44: error: use of undeclared identifier 'xmm'
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x65AE00); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2239:42: error: use of undeclared identifier 'xmm'
v26 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x65AE10); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2240:42: error: use of undeclared identifier 'xmm'
v27 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x65AE20); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/cse.c:2241:42: error: use of undeclared identifier 'xmm'
v28 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x668290); 
                                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert/src/obj/cse.o] Error 1
